[gd_scene load_steps=23 format=3 uid="uid://lnbtb4r1nwcr"]

[ext_resource type="Texture2D" uid="uid://dhjsl4t3qblw3" path="res://sprites/characters/slime.png" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://dp64r3e8515pw" path="res://scripts/enemy.gd" id="1_md0e3"]
[ext_resource type="PackedScene" uid="uid://do5ns1hmu3sin" path="res://scenes/dust.tscn" id="3_4ra3w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_md0e3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qclf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8i8w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_otmr2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtq4b"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0cyh"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0wcc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ycm"]
atlas = ExtResource("1_7p1mj")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_shcg2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md0e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qclf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8i8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otmr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtq4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0cyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0wcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ycm")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ile5s"]
radius = 44.66791

[sub_resource type="CircleShape2D" id="CircleShape2D_1x4g4"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_md0e3"]
radius = 11.00505

[node name="enemy" type="CharacterBody2D"]
scale = Vector2(3, 3)
motion_mode = 1
script = ExtResource("1_md0e3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_shcg2")
animation = &"idle"
frame_progress = 0.17040485

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_ile5s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_1x4g4")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(1.3333334, -4)
shape = SubResource("CircleShape2D_md0e3")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.25

[node name="healthbar" type="ProgressBar" parent="."]
offset_left = -7.333334
offset_top = 2.0
offset_right = 139.33333
offset_bottom = 29.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="dust" parent="." instance=ExtResource("3_4ra3w")]

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
